--- a/index.html
+++ b/index.html
@@ -30,16 +30,14 @@
 
     <header class="container">
         <!-- news catagories  -->
+        <section>
+            <div id="headline-container" class=" d-flex justify-content-between fs-5 py-4 ">
 
 
-        <!-- spinner loadder  -->
-        <section id="loader" class="d-none">
-            <div class="d-flex justify-content-center align-items-center " style="height: 300px;">
-                <div class="spinner-border text-primary" role="status">
-                    <span class="visually-hidden">Loading...</span>
-                </div>
             </div>
         </section>
+
+        <!-- spinner loadder  -->
 
         <!-- news catagories item  -->
         <section class="pb-4">
