--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
         </section>
 
         <!-- spinner loadder  -->
+        <section id="loader" class="d-none">
+            <div class="d-flex justify-content-center align-items-center " style="height: 300px;">
+                <div class="spinner-border text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
 
         <!-- news catagories item  -->
         <section class="pb-4">
