--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
         </section>
 
         <!-- news catagories item  -->
+        <section class="pb-4">
+            <div class="card">
+                <div class="card-body fs-4 text-center" id="cata-id">
 
+                </div>
+            </div>
+        </section>
     </header>
     <main class="container">
         <!-- view sort  -->
