--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
 
         </section>
         <!-- show all news  -->
+        <section class="py-5">
+            <div id="show-news">
 
+            </div>
+        </section>
 
         <!-- modal start -->
         <section>
